djz24/hw07/y.output
Grammar

    0 $accept: lines $end

    1 lines: lines expr '\n'
    2      | lines ident '=' expr '\n'
    3      | lines '\n'
    4      | /* empty */
    5      | error '\n'

    6 expr: expr '+' expr
    7     | expr '-' expr
    8     | expr '*' expr
    9     | expr '/' expr
   10     | expr '^' expr
   11     | expr '&' expr
   12     | expr '%' expr
   13     | '~' expr
   14     | expr '|' expr
   15     | '(' expr ')'
   16     | '-' expr
   17     | number
   18     | ident

   19 number: INTEGER
   20       | FLOAT

   21 ident: IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 1 2 3 5
'%' (37) 12
'&' (38) 11
'(' (40) 15
')' (41) 15
'*' (42) 8
'+' (43) 6
'-' (45) 7 16
'/' (47) 9
'=' (61) 2
'^' (94) 10
'|' (124) 14
'~' (126) 13
error (256) 5
INTEGER (258) 19
FLOAT (259) 20
IDENTIFIER (260) 21
UMINUS (261)


Nonterminals, with rules where they appear

$accept (20)
    on left: 0
lines (21)
    on left: 1 2 3 4 5, on right: 0 1 2 3
expr (22)
    on left: 6 7 8 9 10 11 12 13 14 15 16 17 18, on right: 1 2 6 7
    8 9 10 11 12 13 14 15 16
number (23)
    on left: 19 20, on right: 17
ident (24)
    on left: 21, on right: 2 18


state 0

    0 $accept: . lines $end

    error  shift, and go to state 1

    $end        reduce using rule 4 (lines)
    INTEGER     reduce using rule 4 (lines)
    FLOAT       reduce using rule 4 (lines)
    IDENTIFIER  reduce using rule 4 (lines)
    '-'         reduce using rule 4 (lines)
    '~'         reduce using rule 4 (lines)
    '\n'        reduce using rule 4 (lines)
    '('         reduce using rule 4 (lines)

    lines  go to state 2


state 1

    5 lines: error . '\n'

    '\n'  shift, and go to state 3


state 2

    0 $accept: lines . $end
    1 lines: lines . expr '\n'
    2      | lines . ident '=' expr '\n'
    3      | lines . '\n'

    $end        shift, and go to state 4
    INTEGER     shift, and go to state 5
    FLOAT       shift, and go to state 6
    IDENTIFIER  shift, and go to state 7
    '-'         shift, and go to state 8
    '~'         shift, and go to state 9
    '\n'        shift, and go to state 10
    '('         shift, and go to state 11

    expr    go to state 12
    number  go to state 13
    ident   go to state 14


state 3

    5 lines: error '\n' .

    $default  reduce using rule 5 (lines)


state 4

    0 $accept: lines $end .

    $default  accept


state 5

   19 number: INTEGER .

    $default  reduce using rule 19 (number)


state 6

   20 number: FLOAT .

    $default  reduce using rule 20 (number)


state 7

   21 ident: IDENTIFIER .

    $default  reduce using rule 21 (ident)


state 8

   16 expr: '-' . expr

    INTEGER     shift, and go to state 5
    FLOAT       shift, and go to state 6
    IDENTIFIER  shift, and go to state 7
    '-'         shift, and go to state 8
    '~'         shift, and go to state 9
    '('         shift, and go to state 11

    expr    go to state 15
    number  go to state 13
    ident   go to state 16


state 9

   13 expr: '~' . expr

    INTEGER     shift, and go to state 5
    FLOAT       shift, and go to state 6
    IDENTIFIER  shift, and go to state 7
    '-'         shift, and go to state 8
    '~'         shift, and go to state 9
    '('         shift, and go to state 11

    expr    go to state 17
    number  go to state 13
    ident   go to state 16


state 10

    3 lines: lines '\n' .

    $default  reduce using rule 3 (lines)


state 11

   15 expr: '(' . expr ')'

    INTEGER     shift, and go to state 5
    FLOAT       shift, and go to state 6
    IDENTIFIER  shift, and go to state 7
    '-'         shift, and go to state 8
    '~'         shift, and go to state 9
    '('         shift, and go to state 11

    expr    go to state 18
    number  go to state 13
    ident   go to state 16


state 12

    1 lines: lines expr . '\n'
    6 expr: expr . '+' expr
    7     | expr . '-' expr
    8     | expr . '*' expr
    9     | expr . '/' expr
   10     | expr . '^' expr
   11     | expr . '&' expr
   12     | expr . '%' expr
   14     | expr . '|' expr

    '|'   shift, and go to state 19
    '^'   shift, and go to state 20
    '&'   shift, and go to state 21
    '+'   shift, and go to state 22
    '-'   shift, and go to state 23
    '*'   shift, and go to state 24
    '/'   shift, and go to state 25
    '%'   shift, and go to state 26
    '\n'  shift, and go to state 27


state 13

   17 expr: number .

    $default  reduce using rule 17 (expr)


state 14

    2 lines: lines ident . '=' expr '\n'
   18 expr: ident .

    '='  shift, and go to state 28

    $default  reduce using rule 18 (expr)


state 15

    6 expr: expr . '+' expr
    7     | expr . '-' expr
    8     | expr . '*' expr
    9     | expr . '/' expr
   10     | expr . '^' expr
   11     | expr . '&' expr
   12     | expr . '%' expr
   14     | expr . '|' expr
   16     | '-' expr .

    $default  reduce using rule 16 (expr)


state 16

   18 expr: ident .

    $default  reduce using rule 18 (expr)


state 17

    6 expr: expr . '+' expr
    7     | expr . '-' expr
    8     | expr . '*' expr
    9     | expr . '/' expr
   10     | expr . '^' expr
   11     | expr . '&' expr
   12     | expr . '%' expr
   13     | '~' expr .
   14     | expr . '|' expr

    $default  reduce using rule 13 (expr)


state 18

    6 expr: expr . '+' expr
    7     | expr . '-' expr
    8     | expr . '*' expr
    9     | expr . '/' expr
   10     | expr . '^' expr
   11     | expr . '&' expr
   12     | expr . '%' expr
   14     | expr . '|' expr
   15     | '(' expr . ')'

    '|'  shift, and go to state 19
    '^'  shift, and go to state 20
    '&'  shift, and go to state 21
    '+'  shift, and go to state 22
    '-'  shift, and go to state 23
    '*'  shift, and go to state 24
    '/'  shift, and go to state 25
    '%'  shift, and go to state 26
    ')'  shift, and go to state 29


state 19

   14 expr: expr '|' . expr

    INTEGER     shift, and go to state 5
    FLOAT       shift, and go to state 6
    IDENTIFIER  shift, and go to state 7
    '-'         shift, and go to state 8
    '~'         shift, and go to state 9
    '('         shift, and go to state 11

    expr    go to state 30
    number  go to state 13
    ident   go to state 16


state 20

   10 expr: expr '^' . expr

    INTEGER     shift, and go to state 5
    FLOAT       shift, and go to state 6
    IDENTIFIER  shift, and go to state 7
    '-'         shift, and go to state 8
    '~'         shift, and go to state 9
    '('         shift, and go to state 11

    expr    go to state 31
    number  go to state 13
    ident   go to state 16


state 21

   11 expr: expr '&' . expr

    INTEGER     shift, and go to state 5
    FLOAT       shift, and go to state 6
    IDENTIFIER  shift, and go to state 7
    '-'         shift, and go to state 8
    '~'         shift, and go to state 9
    '('         shift, and go to state 11

    expr    go to state 32
    number  go to state 13
    ident   go to state 16


state 22

    6 expr: expr '+' . expr

    INTEGER     shift, and go to state 5
    FLOAT       shift, and go to state 6
    IDENTIFIER  shift, and go to state 7
    '-'         shift, and go to state 8
    '~'         shift, and go to state 9
    '('         shift, and go to state 11

    expr    go to state 33
    number  go to state 13
    ident   go to state 16


state 23

    7 expr: expr '-' . expr

    INTEGER     shift, and go to state 5
    FLOAT       shift, and go to state 6
    IDENTIFIER  shift, and go to state 7
    '-'         shift, and go to state 8
    '~'         shift, and go to state 9
    '('         shift, and go to state 11

    expr    go to state 34
    number  go to state 13
    ident   go to state 16


state 24

    8 expr: expr '*' . expr

    INTEGER     shift, and go to state 5
    FLOAT       shift, and go to state 6
    IDENTIFIER  shift, and go to state 7
    '-'         shift, and go to state 8
    '~'         shift, and go to state 9
    '('         shift, and go to state 11

    expr    go to state 35
    number  go to state 13
    ident   go to state 16


state 25

    9 expr: expr '/' . expr

    INTEGER     shift, and go to state 5
    FLOAT       shift, and go to state 6
    IDENTIFIER  shift, and go to state 7
    '-'         shift, and go to state 8
    '~'         shift, and go to state 9
    '('         shift, and go to state 11

    expr    go to state 36
    number  go to state 13
    ident   go to state 16


state 26

   12 expr: expr '%' . expr

    INTEGER     shift, and go to state 5
    FLOAT       shift, and go to state 6
    IDENTIFIER  shift, and go to state 7
    '-'         shift, and go to state 8
    '~'         shift, and go to state 9
    '('         shift, and go to state 11

    expr    go to state 37
    number  go to state 13
    ident   go to state 16


state 27

    1 lines: lines expr '\n' .

    $default  reduce using rule 1 (lines)


state 28

    2 lines: lines ident '=' . expr '\n'

    INTEGER     shift, and go to state 5
    FLOAT       shift, and go to state 6
    IDENTIFIER  shift, and go to state 7
    '-'         shift, and go to state 8
    '~'         shift, and go to state 9
    '('         shift, and go to state 11

    expr    go to state 38
    number  go to state 13
    ident   go to state 16


state 29

   15 expr: '(' expr ')' .

    $default  reduce using rule 15 (expr)


state 30

    6 expr: expr . '+' expr
    7     | expr . '-' expr
    8     | expr . '*' expr
    9     | expr . '/' expr
   10     | expr . '^' expr
   11     | expr . '&' expr
   12     | expr . '%' expr
   14     | expr . '|' expr
   14     | expr '|' expr .

    '^'  shift, and go to state 20
    '&'  shift, and go to state 21
    '+'  shift, and go to state 22
    '-'  shift, and go to state 23
    '*'  shift, and go to state 24
    '/'  shift, and go to state 25
    '%'  shift, and go to state 26

    $default  reduce using rule 14 (expr)


state 31

    6 expr: expr . '+' expr
    7     | expr . '-' expr
    8     | expr . '*' expr
    9     | expr . '/' expr
   10     | expr . '^' expr
   10     | expr '^' expr .
   11     | expr . '&' expr
   12     | expr . '%' expr
   14     | expr . '|' expr

    '&'  shift, and go to state 21
    '+'  shift, and go to state 22
    '-'  shift, and go to state 23
    '*'  shift, and go to state 24
    '/'  shift, and go to state 25
    '%'  shift, and go to state 26

    $default  reduce using rule 10 (expr)


state 32

    6 expr: expr . '+' expr
    7     | expr . '-' expr
    8     | expr . '*' expr
    9     | expr . '/' expr
   10     | expr . '^' expr
   11     | expr . '&' expr
   11     | expr '&' expr .
   12     | expr . '%' expr
   14     | expr . '|' expr

    '+'  shift, and go to state 22
    '-'  shift, and go to state 23
    '*'  shift, and go to state 24
    '/'  shift, and go to state 25
    '%'  shift, and go to state 26

    $default  reduce using rule 11 (expr)


state 33

    6 expr: expr . '+' expr
    6     | expr '+' expr .
    7     | expr . '-' expr
    8     | expr . '*' expr
    9     | expr . '/' expr
   10     | expr . '^' expr
   11     | expr . '&' expr
   12     | expr . '%' expr
   14     | expr . '|' expr

    '*'  shift, and go to state 24
    '/'  shift, and go to state 25
    '%'  shift, and go to state 26

    $default  reduce using rule 6 (expr)


state 34

    6 expr: expr . '+' expr
    7     | expr . '-' expr
    7     | expr '-' expr .
    8     | expr . '*' expr
    9     | expr . '/' expr
   10     | expr . '^' expr
   11     | expr . '&' expr
   12     | expr . '%' expr
   14     | expr . '|' expr

    '*'  shift, and go to state 24
    '/'  shift, and go to state 25
    '%'  shift, and go to state 26

    $default  reduce using rule 7 (expr)


state 35

    6 expr: expr . '+' expr
    7     | expr . '-' expr
    8     | expr . '*' expr
    8     | expr '*' expr .
    9     | expr . '/' expr
   10     | expr . '^' expr
   11     | expr . '&' expr
   12     | expr . '%' expr
   14     | expr . '|' expr

    $default  reduce using rule 8 (expr)


state 36

    6 expr: expr . '+' expr
    7     | expr . '-' expr
    8     | expr . '*' expr
    9     | expr . '/' expr
    9     | expr '/' expr .
   10     | expr . '^' expr
   11     | expr . '&' expr
   12     | expr . '%' expr
   14     | expr . '|' expr

    $default  reduce using rule 9 (expr)


state 37

    6 expr: expr . '+' expr
    7     | expr . '-' expr
    8     | expr . '*' expr
    9     | expr . '/' expr
   10     | expr . '^' expr
   11     | expr . '&' expr
   12     | expr . '%' expr
   12     | expr '%' expr .
   14     | expr . '|' expr

    $default  reduce using rule 12 (expr)


state 38

    2 lines: lines ident '=' expr . '\n'
    6 expr: expr . '+' expr
    7     | expr . '-' expr
    8     | expr . '*' expr
    9     | expr . '/' expr
   10     | expr . '^' expr
   11     | expr . '&' expr
   12     | expr . '%' expr
   14     | expr . '|' expr

    '|'   shift, and go to state 19
    '^'   shift, and go to state 20
    '&'   shift, and go to state 21
    '+'   shift, and go to state 22
    '-'   shift, and go to state 23
    '*'   shift, and go to state 24
    '/'   shift, and go to state 25
    '%'   shift, and go to state 26
    '\n'  shift, and go to state 39


state 39

    2 lines: lines ident '=' expr '\n' .

    $default  reduce using rule 2 (lines)
